# gedi

./: .gitignore  README.md  pyproject.toml
gedi/: __init__.py  gedi.py  registration.py
gedi/backbones/pointnet2_ops_lib/: pyproject.toml  setup.py
gedi/backbones/pointnet2_ops_lib/pointnet2_ops/_ext-src/include/: utils.h
gedi/backbones/pointnet2_ops_lib/pointnet2_ops/_ext-src/src/: ball_query.cpp  ball_query_cpu.h  group_points.cpp  group_points_cpu.h  interpolate.cpp  interpolate_cpu.h  sampling.cpp  sampling_cpu.h
